package it.unifi.ing.drivehub.presentation.core;

public interface ContextAware {
    void setApplicationContext(ApplicationContext context);
}
